💄 fix horizontal scrolling issue (#60)

--- a/dashboard-app/src/styles/index.css
+++ b/dashboard-app/src/styles/index.css
@@ -7,6 +7,7 @@
 
 body {
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 /* http://meyerweb.com/eric/tools/css/reset/
